syntax = "proto3";

option csharp_namespace = "Protos.Actions.AcceptCheckpoint";

package acceptcheckpoint;

message AcceptCheckpointRequest {
  string Id = 1;
}