syntax = "proto3";

option csharp_namespace = "Protos.Actions.DeleteAction";

package deleteaction;

message DeleteActionResponse {

}
