syntax = "proto3";

option csharp_namespace = "Protos.Actions.GetActionEntrySettings";

package getactionentrysettings;

message GetActionEntrySettingsRequest {
  string Id = 1;
}