syntax = "proto3";

option csharp_namespace = "Protos.Actions.GetResultsForAction";

package getresultsforaction;

message GetResultsForActionRequest {
  string ActionId = 1;
}