syntax = "proto3";

option csharp_namespace = "Protos.Actions.GetSelectedActions";

package getselectedactions;

message GetSelectedActionsRequest {
  repeated string Ids = 1;
}