syntax = "proto3";

option csharp_namespace = "Protos.Actions.GetSelectedActions";

package getselectedactions;

import "google/type/datetime.proto";
import "google/type/latlng.proto";

message GetSelectedActionsResponse {
  repeated Action Actions = 1;
}

message Action {
  string Id = 1;
  google.type.DateTime Created = 2;
  string Name = 3;
  string Description = 4;
  string ContactMail = 5;
  TermDto Term = 6;
  AddressDto Address = 7;
  repeated CheckpointDto Checkpoints = 8;
  repeated RaceDto Races = 9;
  ActionSaleDto Sale = 10;
  string TypeId = 11;
}

message CheckpointDto {
  string Id = 1;
  string Name = 2;
  google.type.LatLng Position = 3;
}

message RaceDto {
  string Id = 1;
  string Name = 2;
  double Distance = 3;
  double Incline = 4;
  google.type.DateTime EnteringFrom = 5;
  google.type.DateTime EnteringTo = 6;
  int32 MaxNumberOfCompetitors = 7;
  google.type.DateTime Begin = 8;
  google.type.DateTime End = 9;
  repeated CategoryDto Categories = 10;
  repeated PaymentDefinitionDto Payments = 11;
  LimitsDto Limits = 12;
}

message CategoryDto {
  string Id = 1;
  string Name = 2;
  string Description = 3;
  repeated RacerDto Racers = 4;
}

enum RaceState {
  NotSpecified = 0;
  NotStarted = 1;
  Started = 2;
  Finished = 3;
  DidNotFinished = 4;
  Disqualified = 5;
}

message RacerDto {
  string Id = 1;
  string CompetitorId = 2;
  string CheckpointData = 3;
  string FirstName = 4;
  string LastName = 5;
  string Phone = 6;
  string Email = 7;
  repeated PetDto Pets = 8;
  google.type.DateTime Start = 9;
  google.type.DateTime Finish = 10;
  RaceState State = 11;
  bool Accepted = 12;
  bool Payed = 13;
  repeated PaymentDto Payments = 14;
  repeated NoteDto Notes = 15;
  RequestedPaymentsDto RequestedPayments = 16;
  repeated MerchandizeItemDto Merchandize = 17;
  AddressDto Address = 18;
  repeated PassedCheckpointDto PassedCheckpoints = 19;
}

message PassedCheckpointDto {
  string Id = 1;
  google.type.DateTime Passed = 2;
  google.type.LatLng Position = 3;
}

message NoteDto {
  google.type.DateTime Time = 1;
  string Text = 2;
}

message PetDto {
  string Id = 1;
  string UserId = 2;
  string Name = 3;
  string Kennel = 4;
  string Pedigree = 5;
  string Chip = 6;
  google.type.DateTime Birthday = 7;
  google.type.DateTime Decease = 8;
  string UriToPhoto = 9;
  string Contact = 10;
  repeated VaccinationDto Vaccinations = 11;
}

message VaccinationDto {
  google.type.DateTime Date = 1;
  google.type.DateTime ValidUntil = 2;
  VaccinationType Type = 3;
  string UriToPhoto = 4;
  string Note = 5;
}

enum VaccinationType {
  NotValid = 0;
  Rabies = 1; // Vzteklina
  Psinka = 2;
  Parvoviroza = 3;
  HepatitidaContagiosaCanis = 4;
  Leptospiroza = 5;
  Parainfluenza = 6;
  LymskaBorelioza = 7;
  Babesioza = 8;
  PlisnoveInfekce = 9;
  Leishmanioza = 10;
}

message RequestedPaymentsDto {
  string VariableNumber = 1;
  double Sum = 2;
  repeated RequestedPaymentItem Items = 3;
}

message RequestedPaymentItem {
  string Name = 1;
  double Price = 2;
  string Currency = 3;
}

message PaymentDto {
  google.type.DateTime Date = 1;
  double Amount = 2;
  string Currency = 3;
  string BankAccount = 4;
  string Note = 5;
}

message MerchandizeItemDto {
  string Id = 1;
  string Name = 2;
  string Description = 3;
  double Price = 4;
  string Currency = 5;
  string Variant = 6;
  string Size = 7;
  string Color = 8;
  string Note = 9;
  int32 Count = 10;
}

message PaymentDefinitionDto {
  string Id = 1;
  string BankAccount = 2;
  google.type.DateTime From = 3;
  google.type.DateTime To = 4;
  double Price = 5;
  string Currency = 6;
}

message LimitsDto {
  int32 MinimalAgeOfRacerInDayes = 1;
  int32 MinimalAgeOfThePetInDayes = 2;
  bool WithPets = 3;
}

message TermDto {
  google.type.DateTime From = 1;
  google.type.DateTime To = 2;
}

message AddressDto {
  string Country = 1;
  string Region = 2;
  string ZipCode = 3;
  string City = 4;
  string Street = 5;
  google.type.LatLng Position = 6;
}

message ActionSaleDto {
  repeated ActionSaleItemDto Items = 1;
}

message ActionSaleItemDto {
  string Id = 1;
  string Name = 2;
  string Description = 3;
  double Price = 4;
  string Currency = 5;
  repeated string Variants = 6;
  repeated string Sizes = 7;
  repeated string Colors = 8;
}