syntax = "proto3";

option csharp_namespace = "Protos.Actions.GetSimpleActionsList";

package getsimpleactionslist;

import "google/type/datetime.proto";

message GetSimpleActionsListResponse {
  repeated SimpleActionDto Actions = 1;
}

message SimpleActionDto {
  string Id = 1;
  string Name = 2;
  string Description = 3;
  string City = 4;
  google.type.DateTime Begin = 5;
  google.type.DateTime End = 6;
  string Type = 7;
  repeated RaceDto Races = 8;
}

message RaceDto {
  string Id = 1;
  string Name = 2;
}
